--- a/style.css
+++ b/style.css
@@ -1,25 +1,59 @@
 *{
-    padding: 0;
     margin: 0;
-    text-decoration: none;
-    list-style: none;
+    padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
+}
+:root{
+    --bg-color: #000000;
+    --sec-color: #030303;
+    --text-color:white;
+    --main-color:#4fb8b2;
 }
 body{
-    font-family: sans-serif;
-    background-color: black;
+    background: var(--sec-color);
+    color: var(--text-color);
 }
-nav{
-    background: #000000;
-    height: 80px;
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 50px;
     width: 100%;
+    padding: 2rem 1% 4rem;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+    display:  flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 5;
 }
-label.logo{
-    color: #4fb8b2;
-    font-size: 45px;
+.logo{
+    font-size: 4rem;
+    padding-left: 3rem;
+    color: var(--main-color);
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.3s ease;
     line-height: 80px;
     padding: 0 100px;
     font-weight: bold;
+}
+.navbar{
+    width: 100%;
+    font-size: 1.8rem;
+    color: var(--main-color);
+    height: 50px;
+    cursor: pointer;
+    padding: 0 10px;
+    margin-left: 1rem;
+    font-weight: 500;
+    transition: 0.3s ease;
+    border-bottom: 3px solid transparent;
 }
 nav ul{
     float: right;
@@ -38,19 +72,95 @@ ul li a{
     text-transform: uppercase;
 }
 a.active,a:hover{
-    background: #4fb8b2;
+    background: var(--main-color);
     transition: 0.5s;
     padding: 15px 20px;
 }
-h1{
-    color: #4fb8b2;
-    font-size: 80px;
-    padding-top: 12rem;
-    padding-left: 6rem;
+.home{
+    display: flex;
+    float: center;
+    align-items: center;
+    gap: 15rem;
 }
-h3{
-    color: #4fb8b2;
-    font-size: 50px;
-    padding-top: 1rem;
-    padding-left: 6rem;
+.home-content{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    text-align: left;
+    margin-top: 4rem;
+}
+.home-content h3{
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    font-size: 3.5rem;
+}
+.home-content h1{
+    font-size: 7rem;
+    font-weight: 700;
+    margin-top: 15rem;
+    margin-left: 10rem;
+    line-height: 1;
+}
+.home-content p{
+    margin-bottom: 4rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.8;
+    max-width: 1000px;
+}
+.social-icons a{
+    display: inline-flex;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 4.5rem;
+    height: 4.5rem;
+    background: transparent;
+    border: 2px solid var(--main-color);
+    border-radius: 50%;
+    font-size: 2.5rem;
+    color: var(--main-color);
+    transition: 0.3s ease-in-out;
+}
+.social-icons a:hover{
+    color: var(--text-color);
+    transform: scale(1.3)translate(-5px);
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+}
+.btn{
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 1rem 2rem;
+    background: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    border-radius: 4rem;
+    font-size: 1.6rem;
+    color: black;
+    border: 2px solid transparent;
+    letter-spacing: 0.1rem;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+}
+.btn:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 50px var(--main-color);
+}
+.btn-group{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+.btn-group a:nth-of-type(2){
+    background-color: black;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 0 0 25px transparent;
+}
+.btn-group a:nth-of-type(2):hover{
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+    color: black;
 }
